[package]
name = "crm-customer-enrichment-capability-composition"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
crm-capability-plan-support = { path = "../crm-capability-plan-support" }
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-consents-capability-adapter = { path = "../crm-consents-capability-adapter" }
crm-consents-query-adapter = { path = "../crm-consents-query-adapter" }
crm-core-data = { path = "../crm-core-data" }
crm-customer-enrichment = { path = "../../modules/crm-customer-enrichment" }
crm-customer-enrichment-capability-adapter = { path = "../crm-customer-enrichment-capability-adapter" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-parties-query-adapter = { path = "../crm-parties-query-adapter" }
crm-proto-contracts = { path = "../crm-proto-contracts" }
crm-query-runtime = { path = "../crm-query-runtime" }
prost = "0.14"
