[package]
name = "crm-customer-enrichment-materialization-composition"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
postgres-integration = []

[dependencies]
crm-application-composition = { path = "../crm-application-composition" }
crm-capability-ingress = { path = "../crm-capability-ingress" }
crm-capability-plan-support = { path = "../crm-capability-plan-support" }
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-core-data = { path = "../crm-core-data" }
crm-core-events = { path = "../crm-core-events" }
crm-core-files = { path = "../crm-core-files" }
crm-customer-enrichment = { path = "../../modules/crm-customer-enrichment" }
crm-customer-enrichment-capability-adapter = { path = "../crm-customer-enrichment-capability-adapter" }
crm-customer-enrichment-materialization-adapter = { path = "../crm-customer-enrichment-materialization-adapter" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-proto-contracts = { path = "../crm-proto-contracts" }
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "postgres_materialization_process"
path = "tests/postgres_materialization_process.rs"
required-features = ["postgres-integration"]

[[test]]
name = "postgres_materialization_event_process"
path = "tests/postgres_materialization_event_process.rs"
required-features = ["postgres-integration"]
