[package]
name = "crm-customer-enrichment-provider-process-composition"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
postgres-integration = []

[dependencies]
crm-application-composition = { path = "../crm-application-composition" }
crm-capability-ingress = { path = "../crm-capability-ingress" }
crm-capability-plan-support = { path = "../crm-capability-plan-support" }
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-core-data = { path = "../crm-core-data" }
crm-core-events = { path = "../crm-core-events" }
crm-customer-enrichment = { path = "../../modules/crm-customer-enrichment" }
crm-customer-enrichment-capability-adapter = { path = "../crm-customer-enrichment-capability-adapter" }
crm-customer-enrichment-worker-composition = { path = "../crm-customer-enrichment-worker-composition" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-proto-contracts = { path = "../crm-proto-contracts" }
prost = "0.14"
sha2 = "0.10"

[dev-dependencies]
serde_json = "1"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "postgres_conflict_persistence"
path = "tests/postgres_conflict_persistence.rs"
required-features = ["postgres-integration"]

[[test]]
name = "postgres_conflict_process_hold"
path = "tests/postgres_conflict_process_hold.rs"
required-features = ["postgres-integration"]
