[package]
name = "crm-customer-enrichment-review-composition"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
postgres-integration = []

[dependencies]
crm-capability-plan-support = { path = "../crm-capability-plan-support" }
crm-capability-runtime = { path = "../crm-capability-runtime" }
crm-core-data = { path = "../crm-core-data" }
crm-customer-enrichment = { path = "../../modules/crm-customer-enrichment" }
crm-customer-enrichment-capability-adapter = { path = "../crm-customer-enrichment-capability-adapter" }
crm-customer-enrichment-review-adapter = { path = "../crm-customer-enrichment-review-adapter" }
crm-module-sdk = { path = "../crm-module-sdk" }
crm-proto-contracts = { path = "../crm-proto-contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", default-features = false, features = ["postgres", "runtime-tokio"] }

[dev-dependencies]
crm-capability-ingress = { path = "../crm-capability-ingress" }
crm-customer-enrichment-suggestion-query-adapter = { path = "../crm-customer-enrichment-suggestion-query-adapter" }
crm-query-runtime = { path = "../crm-query-runtime" }
prost = "0.14"
sqlx = { version = "0.9", default-features = false, features = ["postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "postgres_review_process"
path = "tests/postgres_review_process.rs"
required-features = ["postgres-integration"]
